# SDLDemo

./: .gitignore  CMakeLists.txt  COPYING.txt  README.md  SDLDemo.apparmor  SDLDemo.desktop  manifest.json.in
ext/: CMakeLists.txt  download-dependencies.sh
ext/patches/: sdl2_ttf-no-programs.patch  sdl2pp-make-lib-static.patch  sdl2pp-sdl-img-ttf-different-dirs.patch
src/: CMakeLists.txt  FingerImage.cpp  FingerImage.h  ResourcePath.cpp  ResourcePath.h  SDLDemo.cpp
